// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en componente <GifGrid/> debe de mostrar items cuando se cargan imagenes con nuestro Hook useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    WTF
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en componente <GifGrid/> debe de mostrarse correctamnte 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    WTF
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading ... 
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
